// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> UI 테스트 버튼 색깔은 검정 1`] = `
.emotion-0 {
  height: rem;
  border-radius: 0px;
  border: 1px solid #000000;
  background-color: #000000;
  color: #ffffff;
  padding: 5px 7px;
  font-size: 0.8em;
  cursor: pointer;
  box-shadow: 1px 12px 15px -4px rgba(0, 0, 0, 0.62);
}

.emotion-0:hover {
  box-shadow: 1px 12px 15px 0px rgba(0, 0, 0, 0.62);
  -webkit-transition: box-shadow 250ms ease;
  transition: box-shadow 250ms ease;
}

.emotion-0:active {
  box-shadow: 1px 12px 15px -4px rgba(0, 0, 0, 0.3);
  -webkit-transition: box-shadow 200ms ease;
  transition: box-shadow 200ms ease;
}

.emotion-0>a {
  color: #ffffff;
}

<button
  class="emotion-0"
  color="black"
  radius="0"
>
  버튼
</button>
`;

exports[`<Button /> UI 테스트 버튼 색깔은 노랑 1`] = `
.emotion-0 {
  height: rem;
  border-radius: 0px;
  border: 1px solid #ffd43b;
  background-color: #ffd43b;
  color: #000000;
  padding: 5px 7px;
  font-size: 0.8em;
  cursor: pointer;
  box-shadow: 1px 12px 15px -4px rgba(0, 0, 0, 0.62);
}

.emotion-0:hover {
  box-shadow: 1px 12px 15px 0px rgba(0, 0, 0, 0.62);
  -webkit-transition: box-shadow 250ms ease;
  transition: box-shadow 250ms ease;
}

.emotion-0:active {
  box-shadow: 1px 12px 15px -4px rgba(0, 0, 0, 0.3);
  -webkit-transition: box-shadow 200ms ease;
  transition: box-shadow 200ms ease;
}

.emotion-0>a {
  color: #000000;
}

<button
  class="emotion-0"
  color="yellow"
  radius="0"
>
  버튼
</button>
`;

exports[`<Button /> UI 테스트 버튼 색깔은 하양 1`] = `
.emotion-0 {
  height: rem;
  border-radius: 0px;
  border: 1px solid #000000;
  background-color: #ffffff;
  color: #000000;
  padding: 5px 7px;
  font-size: 0.8em;
  cursor: pointer;
  box-shadow: 1px 12px 15px -4px rgba(0, 0, 0, 0.62);
}

.emotion-0:hover {
  box-shadow: 1px 12px 15px 0px rgba(0, 0, 0, 0.62);
  -webkit-transition: box-shadow 250ms ease;
  transition: box-shadow 250ms ease;
}

.emotion-0:active {
  box-shadow: 1px 12px 15px -4px rgba(0, 0, 0, 0.3);
  -webkit-transition: box-shadow 200ms ease;
  transition: box-shadow 200ms ease;
}

.emotion-0>a {
  color: #000000;
}

<button
  class="emotion-0"
  color="white"
  radius="0"
>
  버튼
</button>
`;
